# recipe-visualizer

./: Cargo.toml
gtk/: Cargo.toml  makefile  shell.nix
gtk/src/: main.rs  style.css
toimage/: Cargo.toml  recipe_single.ron  recipe_toscana.ron  shell.nix
toimage/src/: main.rs
visualizer/: .gitignore  Cargo.toml  shell.nix  show_test_layout.py  test_and_preview.sh
visualizer/src/: layout.rs  lib.rs  main.rs
