[package]
name = "recipetoimage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.20.0", features = ["png"] }
clap = { version = "4.5.9", features = ["derive"] }
hyphenation = { version = "0.8.4", features = ["embed_en-us"] }
pango = { version = "0.20.0", features = ["v1_52"] }
pangocairo = "0.20.0"
ron = "0.8.1"
thiserror = "1.0.62"
recipe_visualizer = { version = "0.1.0", path = "../visualizer" }
