[package]
name = "recipe_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"

[dev-dependencies]
pretty_assertions = "1.4.0"
